--- a/profile.html
+++ b/profile.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Atif Haziq Profile</title>
+  <link rel="stylesheet" href="css/style.css" />
   <style>
     body {
       background-color: #fff2f2;
@@ -16,23 +17,16 @@
     .page-container {
       max-width: 600px;
       margin: 0 auto;
-      padding: 20px 20px 30px;
+      padding: 20px;
     }
 
     .back-btn {
       display: inline-block;
-      margin: 10px auto 20px auto;
+      margin-top: 10px;
       text-decoration: none;
       color: #9b5b6e;
       font-weight: bold;
       font-size: 16px;
-      cursor: pointer;
-      transition: color 0.3s ease;
-    }
-
-    .back-btn:hover {
-      color: #af4c74;
-      text-decoration: underline;
     }
 
     .hearts-row {
@@ -80,7 +74,7 @@
   <div class="page-container">
 
     <!-- Back Button -->
-    <a href="home.html" class="back-btn">← Back to Home</a>
+    <a href="index.html" class="back-btn">← Back to Home</a>
 
     <!-- Hearts -->
     <div class="hearts-row">❤️ ❤️ ❤️</div>
