--- a/main.html
+++ b/main.html
@@ -26,38 +26,46 @@
 
     .page-title {
       font-size: 14px;
-      color: #7b0000;
+      color: #af4c74;
+      margin-bottom: 20px;
+    }
+
+    .hearts-row {
+      font-size: 20px;
+      color: #f48ca5;
       margin-bottom: 30px;
     }
 
     .tab-menu {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
       gap: 15px;
     }
 
     .home-tab {
       display: inline-block;
       padding: 15px 20px;
-      background-color: #ffbad2;
-      border: 3px solid #7b0000;
-      border-radius: 12px;
+      background-color: #ffe6ec;
+      border: 3px solid #af4c74;
+      border-radius: 20px;
       text-decoration: none;
       color: #7b0000;
-      font-size: 0.6em;
-      box-shadow: 4px 4px 0 #7b0000;
-      transition: background-color 0.3s ease;
+      font-size: 10px;
+      box-shadow: 4px 4px 0 #af4c74;
+      transition: all 0.3s ease;
+      width: 220px;
     }
 
     .home-tab:hover {
-      background-color: #ff9ac1;
+      background-color: #ffc6d0;
     }
   </style>
 </head>
 <body>
   <div class="page-container">
-    <h1 class="page-title">Welcome Sayang ❤️</h1>
+    <h1 class="page-title">WELCOME SAYANG ❤️</h1>
+    <div class="hearts-row">💖 💖 💖</div>
 
     <div class="tab-menu">
       <a href="profile.html" class="home-tab">❤️ Profile</a>
