--- a/profile.html
+++ b/profile.html
@@ -74,7 +74,7 @@
   <div class="page-container">
 
     <!-- Back Button -->
-    <a href="index.html" class="back-btn">← Back to Home</a>
+    <a href="main.html" class="back-btn">← Back to Main Menu</a>
 
     <!-- Hearts -->
     <div class="hearts-row">❤️ ❤️ ❤️</div>
@@ -88,8 +88,8 @@
       <div class="profile-info">
         <p><strong>Name:</strong> Atif Haziq</p>
         <p><strong>ID:</strong> Sanzu</p>
-        <p><strong>Rank:</strong> Discord Gamer Boy</p>
-        <p><strong>Level:</strong> Lvl.45 Boyfriend</p>
+        <p><strong>Role:</strong> Discord Gamer Boy</p>
+        <p><strong>Power Level:</strong> Lv.45 Boyfriend</p>
       </div>
     </div>
 
