--- a/loading.html
+++ b/loading.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Loading...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="refresh" content="3;url=main.html" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -51,6 +50,12 @@
       .hearts span { font-size: 18px; }
     }
   </style>
+  <script>
+    // fallback redirect in case meta refresh doesn't work
+    setTimeout(() => {
+      window.location.href = 'main.html';
+    }, 6000); // 6000ms = 6 seconds
+  </script>
 </head>
 <body>
   <h1>Sabar sayang</h1>
